// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GetUser Get current user specified in context when no ID is given 1`] = `
Object {
  "data": Object {
    "GetUser": Object {
      "email": "hi@me.com",
      "level": 3,
      "name": "current user",
      "points": Object {
        "currentLevel": 3,
        "nextLevel": 5,
        "total": 3,
      },
      "repliedArticleCount": 2,
    },
  },
}
`;

exports[`GetUser Get limited data 1`] = `
Object {
  "data": Object {
    "GetUser": Object {
      "email": null,
      "level": 0,
      "name": "test user",
    },
  },
}
`;

exports[`GetUser Get user avatar url from gravatar 1`] = `
Object {
  "data": Object {
    "GetUser": Object {
      "avatarUrl": "https://www.gravatar.com/avatar/ca87e79f73877094f4cd381a38dbc356?s=80&d=identicon&r=g",
      "name": "test email user",
    },
  },
}
`;

exports[`GetUser Get user avatar url from gravatar 2`] = `
Object {
  "data": Object {
    "GetUser": Object {
      "avatarUrl": "https://www.gravatar.com/avatar/ca87e79f73877094f4cd381a38dbc356?s=80&d=identicon&r=g",
      "name": "test email user",
    },
  },
}
`;
